Finalizar Gerenciamento de Perfis

--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -4,18 +4,18 @@
     <div class="navbar-brand-box my-3">
         <a routerLink="/" class="logo logo-dark">
             <h5 class="logo-sm">
-                <strong class="text-white">MARKETplace</strong>
+                <strong class="text-white">Mercado de Saúde</strong>
             </h5>
             <span class="logo-lg">
-                <strong class="text-white">MARKETplace</strong>
+                <strong class="text-white">Mercado de Saúde</strong>
             </span>
         </a>
         <a routerLink="/" class="logo logo-light">
             <h5 class="logo-sm">
-                <strong class="text-white">MARKETplace</strong>
+                <strong class="text-white">Mercado de Saúde</strong>
             </h5>
             <h5 class="logo-lg">
-                <strong class="text-white">MARKETplace</strong>
+                <strong class="text-white">Mercado de Saúde</strong>
             </h5>
         </a>
         <button type="button" class="btn btn-sm p-0 fs-3xl header-item float-end btn-vertical-sm-hover" id="vertical-hover" (click)="toggleMobileMenu($event)">
