--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -33,7 +33,7 @@
 
                 <form class="app-search d-none d-md-inline-flex">
                     <div class="position-relative">
-                        <input type="text" class="form-control" placeholder="Search..." autocomplete="off" id="search-options" value="" (keyup)="Search()">
+                        <input type="text" class="form-control" placeholder="Pesquisar..." autocomplete="off" id="search-options" value="" (keyup)="Search()">
                         <span class="mdi mdi-magnify search-widget-icon"></span>
                         <span class="mdi mdi-close-circle search-widget-icon search-widget-icon-close d-none" id="search-close-options" (click)="closeBtn()"></span>
                     </div>
@@ -407,8 +407,8 @@
                         <span class="d-flex align-items-center">
                             <img class="rounded-circle header-profile-user" src="assets/images/users/32/avatar-1.jpg" alt="Header Avatar">
                             <span class="text-start ms-xl-2">
-                                <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">Baptista Neves</span>
-                                <span class="d-none d-xl-block ms-1 fs-sm user-name-sub-text">Admin</span>
+                                <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">{{loggedInUser.fullName}}</span>
+                                <span class="d-none d-xl-block ms-1 fs-sm user-name-sub-text">{{loggedInUser.role}}</span>
                             </span>
                         </span>
                     </button>
@@ -423,7 +423,7 @@
                         <a class="dropdown-item" routerLink=""><i class="mdi mdi-wallet text-muted fs-lg align-middle me-1"></i> <span class="align-middle"> Balance : <b>$8451.36</b></span></a>
                         <a class="dropdown-item" routerLink="/"><span class="badge bg-success-subtle text-success mt-1 float-end">New</span><i class="mdi mdi-cog-outline text-muted fs-lg align-middle me-1"></i> <span class="align-middle"> Settings</span></a>
                         <a class="dropdown-item" routerLink="/auth/lockscreen"><i class="mdi mdi-lock text-muted fs-lg align-middle me-1"></i> <span class="align-middle"> Lock screen</span></a>
-                        <a class="dropdown-item" href="javascript: void(0);" (click)="logout()"><i class="mdi mdi-logout text-muted fs-lg align-middle me-1"></i> <span class="align-middle" data-key="t-logout"> Logout</span></a>
+                        <a class="dropdown-item" href="javascript: void(0);" (click)="logOut()"><i class="mdi mdi-logout text-muted fs-lg align-middle me-1"></i> <span class="align-middle" data-key="t-logout"> Sair</span></a>
                     </div>
                 </div>
             </div>
