--- a/src/app/modules/configuration/components/roles/edit-role/edit-role.component.html
+++ b/src/app/modules/configuration/components/roles/edit-role/edit-role.component.html
@@ -71,6 +71,10 @@
                                                 </div>
                                             </accordion>
                                         </div>
+                                        <div class="text-end">
+                                            <a routerLink="/configuracao/niveis-de-acesso" type="button" class="btn btn-light mx-2">Voltar</a>
+                                            <button type="submit" [disabled]="editRoleForm.invalid"  class="btn btn-primary">Salvar</button>
+                                        </div>
                                 </form>
                                     
                                 </div><!-- end card-body -->
