--- a/src/app/modules/general/components/subcategories/subcategories.component.html
+++ b/src/app/modules/general/components/subcategories/subcategories.component.html
@@ -92,7 +92,7 @@
         <div class="modal-content">
             <div class="modal-body text-center p-5">
                 <div class="mt-4">
-                    <h4 class="mb-3">Novo Munícipio</h4>
+                    <h4 class="mb-3">Nova Subcategoria</h4>
                     <form [formGroup]="addForm" (ngSubmit)="addSubcategory()" class="text-start my-4">
                         <div class="col-12">
                             <ul *ngIf="errors && errors.length > 0" class="alert alert-danger p-4">
