--- a/src/app/pages/dashboards/index/index.component.html
+++ b/src/app/pages/dashboards/index/index.component.html
@@ -1,3 +1,3 @@
 <!-- Start Breadcrumbs -->
-<app-breadcrumbs title="Dashboard" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+<app-breadcrumbs title="Painel Administrativo" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 <!-- End Breadcrumbs -->
