--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,8 @@
 /* Importing Select SCSS file. */
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
+@import '~dropzone/dist/min/dropzone.min.css';
+
 
 .emoji-mart {
   position: absolute;
